# autoware-pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
doc/: check-package-depends.md
src/autoware_guideline_check/: check_directory_structure.py  check_package_depends.py  check_plugin_name.py
src/autoware_guideline_check/utils/: __init__.py  ros_package_xml.py
src/autoware_pre_commit_hooks/: check_package_depends.py
