[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.0"
name = "autoware_pre_commit_hooks"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dependencies = [
  "pyyaml",
]

[project.scripts]
check-package-depends = "autoware_pre_commit_hooks.check_package_depends:main"

[tool.setuptools]
package-dir = {"" = "src"}
